fixed menu on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -16,7 +16,16 @@ body {
     color:#999;
     font-weight: 700;
 }
-.header-title {
+.navbar-toggle .icon-bar {
+    background-color:#563d7c;
+}
+a.navbar-brand {
+    color:#000;
+}
+ul.navbar-nav li a {
+    color:#000;
+}
+/*.header-title {
     color:#000;
     margin-top:25px;
 }
@@ -31,7 +40,7 @@ body {
     color:#333;
     font-weight: 800;
 }
-
+*/
 img.thumb {
     width:240px;
 }
